# property-managment-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
scripts/: format.sh  lint.sh
src/alembic/: env.py
src/alembic/versions/: b0c281678d84_.py  bac26865c6b2_.py
src/flex/: main.py
src/flex/auth/: __init__.py  api.py  dependencies.py
src/flex/core/: api_model.py  commons.py  config.py  enums.py  exceptions.py  i18n.py  security.py
src/flex/db/: base.py  base_class.py  dependency.py  initial_data.py  mixins.py  session.py
src/flex/property/: api.py  dependencies.py  models.py  schemas.py  service.py
src/flex/user/: api.py  models.py  schemas.py  service.py
tests/: conftest.py
tests/services/: test_user.py
